--- a/Backend/EntityService-QuickCourt/build.gradle
+++ b/Backend/EntityService-QuickCourt/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'maven-publish'
 }
 
 group = 'org.example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 
 java {
     toolchain {
@@ -21,6 +22,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -32,6 +34,36 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId = 'org.example'
+            artifactId = 'entityservicequickcourt'
+            version = '0.0.2-SNAPSHOT'
+
+            // ✅ This fixes the "dependencies-without-versions" problem
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionResult()
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+        }
+    }
+    repositories {
+        // Publish to Maven Local
+        mavenLocal()
+
+        // Also publish to custom folder
+        maven {
+            url = uri('D:/1 Personl Project/Odoo-Hackathon-301/Backend/EntityService-QuickCourt')
+        }
+    }
 }
 
 tasks.named('test') {
