--- a/Backend/AuthService-QuickCourt/src/main/resources/application.yml
+++ b/Backend/AuthService-QuickCourt/src/main/resources/application.yml
@@ -1,14 +1,46 @@
 spring:
   application:
-    name: AuthenticationService
+    name: AuthService
+
   datasource:
     url: jdbc:mysql://localhost:3306/odoo
     username: root
     password: Realme6G90T
+
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
 
+  security:
+    user:
+      name: admin
+      password: admin123
+      roles: ADMIN,USER
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: rapoluvenky8@gmail.com
+    password: caek hhhj ynow vmdn
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+jwt:
+  secret: your_super_secret_jwt_key_at_least_64_characters_long
+  expiry: 86400000
+
+otp:
+  expiry: 300000
+  length: 6
+  max-attempts: 3
+
+cookie:
+  expiry: 3600
+
 server:
-  port: 8081
+  port: 8082
