--- a/Backend/AuthService-QuickCourt/build.gradle
+++ b/Backend/AuthService-QuickCourt/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.example:entityservicequickcourt:0.0.2-SNAPSHOT'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.1'
 }
 
 tasks.named('test') {
