--- a/Backend/AuthService-QuickCourt/src/main/resources/application.yml
+++ b/Backend/AuthService-QuickCourt/src/main/resources/application.yml
@@ -10,5 +10,12 @@ spring:
     hibernate:
       ddl-auto: update
 
+  eureka:
+    client:
+      service-url:
+        defaultZone: http://localhost:8761/eureka
+    instance:
+      preferIpAddress: true
+
 server:
   port: 8081
